Extend Eclipse Collections stream chain terminal translations.